objects/Printer_Update__e.object
<CustomObject>
    <label>Printer Update</label>
    <pluralLabel>Printer Updates</pluralLabel>
    <fields>
        <fullName>Ink_Status__c</fullName>
        <label>Ink Status</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printer_Mode__c</fullName>
        <label>Printer Mode</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>22</length>
        <type>Text</type>
    </fields>
</CustomObject>